--- a/ctc/yesno_ctc.ipynb
+++ b/ctc/yesno_ctc.ipynb
@@ -54,7 +54,7 @@
    ],
    "source": [
     "import torchaudio\n",
-    "yesno_raw = torchaudio.datasets.YESNO('.', download=False)\n",
+    "yesno_raw = torchaudio.datasets.YESNO('.', download=True)\n",
     "\n",
     "# Let's see what the spectrogram looks like\n",
     "fbank = torchaudio.compliance.kaldi.fbank(yesno_raw[0][0], sample_frequency=yesno_raw[0][1], num_mel_bins=20)\n",
