--- a/ctc/yesno_ctc.ipynb
+++ b/ctc/yesno_ctc.ipynb
@@ -77,7 +77,7 @@
     "## Define dataset for training\n",
     "\n",
     "The raw YesNo dataset defined in TorchAudio is simply a collection of waveform and transcription. In order to feed the data to a CTC trainer, there are some preprocessings to do, including: \n",
-    "* label formatting: in raw label 0 means 'NO', 1 means 'YES', map to {\\<blank>:0, \\<space>:1, 'E':2, 'N':3, 'O':4, 'S':5, 'Y':6}\n",
+    "* label formatting: in raw label 0 means 'NO', 1 means 'YES', map using `{<blank>:0, <space>:1, 'E':2, 'N':3, 'O':4, 'S':5, 'Y':6}`\n",
     "  So the token size is 7.\n",
     "* splice neighbour frames and subsample by factor of 3, referred to [this repo](https://github.com/ZhengkunTian/rnn-transducer)\n",
     "  Now the feature dimension is 140.\n",
